force-app/main/default/objects/Process_Dependent_Task_Details__c/Process_Dependent_Task_Details__c.object-meta.xml
<CustomObject>
    <description>Contains the list of task that must be completed to start the current mapped task</description>
    <label>Process Dependent Task Details</label>
    <nameField>
        <displayFormat>DTID{00000}</displayFormat>
        <label>DependentTaskID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Dependent Task Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>