force-app/main/default/objects/Process_Dependent_Task_Details__c/fields/Current_Process_Attribute_Details__c.field-meta.xml
<CustomField>
    <fullName>Current_Process_Attribute_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Process Attribute Details</label>
    <referenceTo>Process_Attribute_Details__c</referenceTo>
    <relationshipLabel>Process Dependent Task Details (Current Process Attribute Details)</relationshipLabel>
    <relationshipName>Process_Dependent_Task_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>