force-app/main/default/objects/Process_Dependent_Task_Details__c/fields/Depend_On_Process_Attribute_Details__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Process_Attribute_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depend On Process Attribute Details</label>
    <referenceTo>Process_Attribute_Details__c</referenceTo>
    <relationshipLabel>Process Dependent Task Details (Depend On Process Attribute Details)</relationshipLabel>
    <relationshipName>Process_Dependent_Task_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>