force-app/main/default/objects/Process_Dependent_Task_Details__c/fields/Process_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute__c</fullName>
    <label>Process Attribute</label>
    <referenceTo>Process_Attribute__c</referenceTo>
    <relationshipLabel>Process Dependent Task Details</relationshipLabel>
    <relationshipName>Process_Dependent_Task_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>