force-app/main/default/objects/Process_Dependent_Task_Details__c/fields/Process_Attribute_Details__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Details__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Process Attribute Details</label>
    <referenceTo>Process_Attribute_Details__c</referenceTo>
    <relationshipLabel>Process Dependent Task Details</relationshipLabel>
    <relationshipName>Process_Dependent_Task_Details</relationshipName>
    <type>Lookup</type>
</CustomField>